<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_course"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.youtube.sorcjc.sga_mobile.ui.CourseActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginBottom="40dp">
        <TextView
            android:id="@+id/tvName"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:text="Nombre del curso"
            android:layout_weight="1"/>
    </LinearLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:text="@string/note_1"
                android:padding="3dip"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:id="@+id/uni1"
                android:textColor="@color/cardview_light_background"/>
            <TextView
                android:text="@string/note_2"
                android:gravity="center"
                android:padding="3dip"
                android:background="@color/colorPrimary"
                android:textColor="@color/cardview_light_background"/>
            <TextView
                android:text="@string/note_3"
                android:gravity="center"
                android:padding="3dip"
                android:background="@color/colorPrimary"
                android:textColor="@color/cardview_light_background"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/Nota1"
                android:gravity="center"
                android:padding="3dip"
                />
            <TextView
                android:id="@+id/Nota2"
                android:gravity="center"
                android:padding="3dip" />
            <TextView
                android:id="@+id/Nota3"
                android:gravity="center"
                android:padding="3dip" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/average"
                android:gravity="center"
                android:background="@color/colorAccent"
                android:layout_span="2"
                android:textColor="@color/cardview_light_background"
                ></TextView>
            <TextView
                android:id="@+id/PromedioFinal"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                ></TextView>
        </TableRow>
    </TableLayout>

</LinearLayout>

